raspberry-backend/static/css/style_v3.css
/* ... */
.sb-nav-fixed #layoutSidenav #layoutSidenav_content {
  padding-left: 100px;
  top: var(--top-height);
}

#layoutError {
  display: flex;
  flex-direction: column;
  min-height: 100vh;
}
#layoutError #layoutError_content {
  min-width: 0;
  flex-grow: 1;
}
#layoutError #layoutError_footer {
  min-width: 0;
}

.img-error {
  max-width: 20rem;
}

.nav .nav-link .sb-nav-link-icon,
.sb-sidenav-menu .nav-link .sb-nav-link-icon {
  margin-right: 0.5rem;
}

.sb-topnav {
  padding-left: 0;
  height: var(--top-height);
  z-index: 1039;
}
.sb-topnav .navbar-brand {
  width: 225px;
  padding-left: 0rem;
  padding-right: 0rem;
  margin: 0;
}
.sb-topnav.navbar-dark #sidebarToggle {
    color: rgba(255, 255, 255, 0.5);
}
.sb-topnav.navbar-light #sidebarToggle {
  color: #212529;
}

.sb-sidenav {
  display: flex;
  flex-direction: column;
  height: 100%;
  flex-wrap: nowrap;
}
.sb-sidenav .sb-sidenav-menu {
  flex-grow: 1;
}
.sb-sidenav .sb-sidenav-menu .nav {
  flex-direction: column;
  flex-wrap: nowrap;
}
.sb-sidenav .sb-sidenav-menu .nav .sb-sidenav-menu-heading {
  padding: 1.75rem 1rem 0.75rem;
  font-size: 0.75rem;
  font-weight: bold;
  text-transform: uppercase;
}
.sb-sidenav .sb-sidenav-menu .nav .nav-link {
  display: flex;
  align-items: center;
  padding-top: 0.75rem;
  padding-bottom: 0.75rem;
  position: relative;
}
.sb-sidenav .sb-sidenav-menu .nav .nav-link .sb-nav-link-icon {
  font-size: 0.9rem;
}
.sb-sidenav .sb-sidenav-menu .nav .nav-link .sb-sidenav-collapse-arrow {
  display: inline-block;
  margin-left: auto;
  transition: transform 0.15s ease;
}
.sb-sidenav .sb-sidenav-menu .nav .nav-link.collapsed .sb-sidenav-collapse-arrow {
  transform: rotate(-90deg);
}
.sb-sidenav .sb-sidenav-menu .nav .sb-sidenav-menu-nested {
  margin-left: 1.5rem;
  flex-direction: column;
}
.sb-sidenav .sb-sidenav-footer {
  padding: 0.75rem;
  flex-shrink: 0;
}

.sb-sidenav-dark {
    #background-color: #212529;
    #background-color: rgb(31,71,147) !important;
    color: rgba(255, 255, 255, 0.5);
}
.sb-sidenav-dark .sb-sidenav-menu .sb-sidenav-menu-heading {
  color: rgba(255, 255, 255, 0.25);
}
.sb-sidenav-dark .sb-sidenav-menu .nav-link {
  color: rgba(255, 255, 255, 0.5);
}
.sb-sidenav-dark .sb-sidenav-menu .nav-link .sb-nav-link-icon {
  color: rgba(255, 255, 255, 0.25);
}
.sb-sidenav-dark .sb-sidenav-menu .nav-link .sb-sidenav-collapse-arrow {
  color: rgba(255, 255, 255, 0.25);
}
.sb-sidenav-dark .sb-sidenav-menu .nav-link:hover {
  color: #fff;
}
.sb-sidenav-dark .sb-sidenav-menu .nav-link.active {
  color: #fff;
}
.sb-sidenav-dark .sb-sidenav-menu .nav-link.active .sb-nav-link-icon .sb-nav-button {
  color: #fff;
}
.sb-sidenav-dark .sb-sidenav-footer {
  background-color: #343a40;
}

.sb-sidenav-light {
  background-color: #f8f9fa;
  color: #212529;
}
.sb-sidenav-light .sb-sidenav-menu .sb-sidenav-menu-heading {
  color: #adb5bd;
}
.sb-sidenav-light .sb-sidenav-menu .nav-link {
  color: #212529;
}
.sb-sidenav-light .sb-sidenav-menu .nav-link .sb-nav-link-icon {
  color: #adb5bd;
}
.sb-sidenav-light .sb-sidenav-menu .nav-link .sb-sidenav-collapse-arrow {
  color: #adb5bd;
}
.sb-sidenav-light .sb-sidenav-menu .nav-link:hover {
  color: #007bff;
}
.sb-sidenav-light .sb-sidenav-menu .nav-link.active {
  color: #007bff;
}
.sb-sidenav-light .sb-sidenav-menu .nav-link.active .sb-nav-link-icon . sb-nav-button {
  color: #007bff;
}
.sb-sidenav-light .sb-sidenav-footer {
  background-color: #e9ecef;
}
.br-red{border: 1px solid #ff0000;}

.reading{font-size:1.7rem;min-width:6rem;display:inline-block;text-align:right;}
.reading-main{font-size:1.2rem;min-width:4rem;display:inline-block;text-align:right;}


#logo{ height:var(--top-height); }
#chart-area{ fill:white; }
.fa-w-16{ width:95px;height:95px;}
.path-icon{ fill:rgb(31,71,147); }
.path-icon-alarm{ fill:red; }
.transparent{ fill:none;fill-opacity:1.0; }
.w-100{width:100%;}
.w-95{width:95%;}
.w-99{width:99%;}

.alarm-ok{border: 1px solid var(--cern); width:20rem;}
.alarm-red{border-color:#ff0000;color:#ff0000}
.text-align-right{text-align:right;}
.text-align-center{text-align:center;}

#alarms{color:red;vertical-align:middle;text-align:center;line-height:calc(var(--top-height) - 0.5rem);}
.border-invisible{
    border: 1px solid rgb(255,255,255);
}
div.active{
    background-color: rgb(240,240,240);
    border: 1px solid var(--cern);
    border-radius: 0.25rem;
}
.patient{ min-width:12rem;}
.sb-control-button{
    border: 1px solid var(--cern);
    width:200px;
    height:100px;
    //box-shadow:
    //    inset 0 0 2px 0 rgba(255,255,255,.4),
    //    inset 0 0 3px 0 rgba(0,0,0,.4),
    //    inset 0 0 3px 5px rgba(0,0,0,.05),
    //    2px 2px 4px 0 rgba(0,0,0,.25);
    border-radius: 4px;    

}
.sb-control-button-pressed{

}

.sb-nav-button{ border: 1px solid var(--cern); width:95px; fill:none;

    display: inline-block;
    //text-shadow: 0 0 2px rgba(0,0,0,.3);
    //font-family: sans-serif;
    //box-shadow:
    //    inset 0 0 2px 0 rgba(255,255,255,.4),
    //    inset 0 0 3px 0 rgba(0,0,0,.4),
    //    inset 0 0 3px 5px rgba(0,0,0,.05),
    //    2px 2px 4px 0 rgba(0,0,0,.25);
    border-radius: 4px;

	      }
.sb-control-button:before {
    top: 0;
    border-bottom-left-radius: 4px;
    border-bottom-right-radius: 4px;
    background: rgba(255,255,255,.6);
    //box-shadow: 0 1px 2px 0 rgba(255,255,255,.6);
}
.sb-control-button:after {
    bottom: 0;
    border-top-left-radius: 4px;
    border-top-right-radius: 4px;
    background: rgba(0,0,0,.15);
    //box-shadow: 0 -1px 2px 0 rgba(0,0,0,.15);
}
.controls { position: absolute;bottom:0;}

.col-center{ margin: 0 auto; }
.lh-1{line-height:1;}
.min-height-1b{min-height:1.75rem;}
.min-height-2{min-height:2rem;}
.min-height-6{min-height:6rem;}
.float-bottom{
    position: absolute; 
    bottom: 0;
}

